changes according to comments